# resume_office

./: .gitignore  Cargo.toml  Resume Office.tscn  default_env.tres  deploy.md  index.html  project.godot  resume_office.sln  resume_office.tscn
assets/: resume_office.gltf
import/: BakedLaptopBottom.material  Close.anim  Cup.material  Desk.material  Lid.material  Open.anim  Plaster001.material  Resume Office.gltf  Resume Office.gltf.import  Resume Office_Cube.mesh  Resume Office_Cube001.mesh  Resume Office_Cube002.mesh  Resume Office_Cylinder.mesh  Resume Office_Plane.mesh  Resume Office_Plane001.mesh  Resume Office_Plane002.mesh  Resume0.material  Resume1.material  Screen.material  resume_office.gltf  resume_office.gltf.import
import/resume_office/: close.tres  cup_material.tres  desk_material.tres  laptop_material.tres  lid_material.tres  open.tres  resume_0_material.tres  resume_1_material.tres  resume_office_cup_mesh.tres  resume_office_desk_mesh.tres  resume_office_laptop_mesh.tres  resume_office_lid_mesh.tres  resume_office_resume_0_mesh.tres  resume_office_resume_1_mesh.tres  resume_office_wall_mesh.tres  screen_material.tres  wall_material.tres
import/textures/: 446c075a5e314cd0cf2b243e744c3af0EcNkCflaNHjrCiWb-0_png.png.import  446c075a5e314cd0cf2b243e744c3af0EcNkCflaNHjrCiWb-1_png.png.import  BakedDeskNormal.jpg.import  BakedDeskNormal.png.import  BakedLaptopBottomColor.jpg.import  BakedLaptopBottomColor.png.import  BakedLaptopBottomNormal.jpg.import  BakedLaptopBottomNormal.png.import  BakedLaptopBottomRuff.jpg.import  BakedLaptopBottomRuff.png.import  BakedLidNormal.jpg.import  BakedLidNormal.png.import  BakedResume0Ruff.jpg.import  BakedResume0Ruff.png.import  BakedResume1Ruff.jpg.import  BakedResume1Ruff.png.import  BakedWallNormal.jpg.import  BakedWallNormal.png.import  Cup.jpg.import  Cup.png.import  CupNormal.jpg.import  CupNormal.png.import  CupRuff.jpg.import  CupRuff.png.import  Plaster001_1K_Color.jpg.import  Plaster001_1K_Color.png.import  Plaster001_1K_Roughness.jpg.import  Plaster001_1K_Roughness.png.import  Plastic011_1K_Color.jpg.import  Plastic011_1K_Color.png.import  Plastic011_1K_Roughness.jpg.import  Plastic011_1K_Roughness.png.import  Resume0.jpg.import  Resume0.png.import  Resume1.jpg.import  Resume1.png.import  Screen.jpg.import  Screen.png.import  wood_table_001_diff_1k.jpg.import  wood_table_001_rough_1k.jpg.import  (+1 more)
sfx/: cup.wav.import  desk_knock.wav.import  paper_0.wav.import  paper_1.wav.import
src/: Camera.cs  Cup.cs  Desk.cs  Logic.cs  MouseEventCapture.cs  camera.rs  inspector.rs  main.rs  scene.rs
